# asio

./: CMakeLists.txt
.github/workflows/: windows.yml
asio/: CMakeLists.txt
asio/include/asio/: async_result.hpp  error.hpp  io_context.hpp  multiple_exceptions.hpp  placeholders.hpp  prefer.hpp  query.hpp  require.hpp  require_concept.hpp  thread_pool.hpp
asio/include/asio/detail/: chrono_time_traits.hpp  config.hpp  is_buffer_sequence.hpp  is_executor.hpp  winsock_init.hpp
asio/include/asio/detail/impl/: posix_thread.ipp  signal_set_service.ipp
asio/include/asio/execution/: bad_executor.hpp  bulk_execute.hpp  connect.hpp  execute.hpp  schedule.hpp  set_done.hpp  set_error.hpp  set_value.hpp  start.hpp  submit.hpp
asio/include/asio/execution/impl/: bad_executor.ipp
asio/include/asio/experimental/: channel_error.hpp  use_coro.hpp
asio/include/asio/experimental/detail/: coro_promise_allocator.hpp  partial_promise.hpp
asio/include/asio/experimental/impl/: promise.hpp
asio/include/asio/impl/: io_context.hpp  multiple_exceptions.ipp  thread_pool.hpp  use_future.hpp
asio/module/: asio-gmf.h  asio-module.h  asio.ixx  asio.vcxproj
asio/src/doc/: history.qbk
